# rocket-rails-auth

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
templates/: login.html.tera  signup.html.tera  success.html.tera
