[package]
name = "authrs"
version = "0.1.0"
authors = ["rob cobb <rwcobbjr@gmail.com>"]
edition = "2018"
description = "authentication and passthrough server"

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["tera_templates"]
